unpackaged/main/default/objects/litify_docs__Email_File_Junction__c/litify_docs__Email_File_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction object to link EmailMessage and File_Info objects. Used to preserve the relationship between emails and attachments.</description>
    <label>Email File Junction</label>
    <nameField>
        <displayFormat>EFJ-{0000}</displayFormat>
        <label>Email File Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email File Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>