unpackaged/main/default/objects/litify_docs__Email_File_Junction__c/fields/litify_docs__Email_Message__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Email_Message__c</fullName>
    <description>Holds a &#39;lookup&#39; to the EmailMessage object.</description>
    <label>Email Message</label>
    <length>18</length>
    <type>Text</type>
</CustomField>