unpackaged/main/default/objects/litify_docs__Email_File_Junction__c/fields/litify_docs__File_Data_Hash__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Data_Hash__c</fullName>
    <description>Holds a 256 character hash of a saved attachment&#39;s file data.</description>
    <label>File Data Hash</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>