unpackaged/main/default/objects/litify_docs__Email_File_Junction__c/fields/litify_docs__File_Info__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Info__c</fullName>
    <description>Holds a lookup to the File_Info record that relates to the EmailMessage Id in the Email_Message__c field.</description>
    <label>File Info</label>
    <referenceTo>litify_docs__File_Info__c</referenceTo>
    <relationshipLabel>Email File Junctions</relationshipLabel>
    <relationshipName>Email_File_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>