unpackaged/main/default/objects/litify_docs__Email_File_Junction__c/fields/litify_docs__Message_Identifier__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Message_Identifier__c</fullName>
    <description>The Outlook message identifier corresponding with the Outlook Email that the file is coming from</description>
    <label>Message Identifier</label>
    <length>756</length>
    <type>LongTextArea</type>
</CustomField>